--- a/src/Layout/Layouts/Tablet/Login/login.scss
+++ b/src/Layout/Layouts/Tablet/Login/login.scss
@@ -73,7 +73,7 @@
   align-items: center;
 }
 
-.form-control {
+.loginLineTablet {
   width: 70%;
 }
 
